Tool textures work now. Also backup before name change